# Terrinet_full

./: README.md
TERRINET/: CMakeLists.txt  README.md  package.xml
TERRINET/src/: main.cpp  movement (copy).ui  movement.cpp  movement.h  movement.ui  terrinet (copy).ui  terrinet.cpp  terrinet.h  terrinet.ui
TERRINET/src/v1 gui/: gui.ui  terrinet (copy).ui
agv_bobcat/: README.md
agv_bobcat/agv/ackermann_vehicle-1/: README.md
agv_bobcat/agv/ackermann_vehicle-1/ackermann_description/: CMakeLists.txt  package.xml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_description/launch/: ackermann_vehicle.launch  rviz.launch  test_robot.launch
agv_bobcat/agv/ackermann_vehicle-1/ackermann_description/rviz/: agv.rviz
agv_bobcat/agv/ackermann_vehicle-1/ackermann_description/urdf/: em_1.urdf.xacro
agv_bobcat/agv/ackermann_vehicle-1/ackermann_gazebo/: CMakeLists.txt  package.xml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_gazebo/config/: em_3905_ackermann_ctrlr_params.yaml  em_3905_joint_ctrlr_params.yaml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_gazebo/launch/: ackermann_vehicle.launch
agv_bobcat/agv/ackermann_vehicle-1/ackermann_gazebo/scripts/: ackermann_controller  ackermann_controller (copy)  fake_odom
agv_bobcat/agv/ackermann_vehicle-1/ackermann_gazebo/src/: odom.cpp  sub_and_pub_rviz.cpp  teleop_agv.cpp
agv_bobcat/agv/ackermann_vehicle-1/ackermann_localization/: CMakeLists.txt  package.xml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_localization/launch/: amcl.launch  map_server.launch
agv_bobcat/agv/ackermann_vehicle-1/ackermann_localization/maps/: ack_wow.yaml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_navigation/: CMakeLists.txt  package.xml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
agv_bobcat/agv/ackermann_vehicle-1/ackermann_navigation/launch/: move_base.launch
agv_bobcat/agv/ackermann_vehicle-1/ackermann_twist2ack/: CMakeLists.txt  package.xml  setup.py
agv_bobcat/agv/ackermann_vehicle-1/ackermann_twist2ack/src/ackermann_twist2ack/: twist2ack.py
agv_bobcat/agv/agv_diff/agv_description/: CMakeLists.txt  package.xml
agv_bobcat/agv/agv_diff/agv_description/config/: control.yaml  control_2.yaml
agv_bobcat/agv/agv_diff/agv_description/launch/: control.launch  gazebo.launch  rviz.launch
agv_bobcat/agv/agv_diff/agv_description/rviz/: agv.rviz
agv_bobcat/agv/agv_diff/agv_description/script/: fake_odom
agv_bobcat/agv/agv_diff/agv_description/src/: agv_sub_and_pub.cpp
agv_bobcat/agv/agv_diff/agv_description/urdf/: agv.xacro  agv_no_dir.xacro  robot.xacro  robot_2 (copy).xacro  robot_2.xacro  robot_2_no_dir.urdf.xacro  robot_2_no_dir.xacro
agv_bobcat/agv/agv_diff/agv_description/worlds/: gs.world
agv_bobcat/agv/agv_diff/agv_localization/: CMakeLists.txt  package.xml
agv_bobcat/agv/agv_diff/agv_localization/launch/: amcl.launch  map_server.launch  slam_gmapping.launch
agv_bobcat/agv/agv_diff/agv_localization/maps/: agv_wow.yaml
agv_bobcat/agv/agv_diff/agv_navigation/: CMakeLists.txt  package.xml
agv_bobcat/agv/agv_diff/agv_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
agv_bobcat/agv/agv_diff/agv_navigation/launch/: move_base.launch
agv_bobcat/bobcat/: README.md
agv_bobcat/bobcat/bobcat_description/: CMakeLists.txt  package.xml
agv_bobcat/bobcat/bobcat_description/config/: control.yaml
agv_bobcat/bobcat/bobcat_description/launch/: control.launch  display.launch  gazebo.launch
agv_bobcat/bobcat/bobcat_description/rviz/: config.rviz
agv_bobcat/bobcat/bobcat_description/urdf/: bobcat.xacro  em_3905.urdf.xacro
agv_bobcat/bobcat/rbcar_control/launch/: rbcar_control.launch
agv_bobcat/bobcat/rbcar_description/: CMakeLists.txt
agv_bobcat/bobcat/rbcar_description/launch/: rbcar.rviz  rbcar_rviz.launch
agv_bobcat/bobcat/rbcar_description/robots/: rbcar.urdf
agv_bobcat/bobcat/rbcar_description/src/: bobsub_and_pub_rviz.cpp
agv_bobcat/bobcat/rbcar_description/urdf/bases/: rbcar_base.gazebo.xacro
agv_bobcat/bobcat/rbcar_gazebo/launch/: rbcar_gs.launch
agv_bobcat/bobcat/rbcar_gazebo/worlds/: rbcar_gs.world
agv_bobcat/bobcat/rbcar_joystick/: CMakeLists.txt
agv_bobcat/bobcat/rbcar_joystick/launch/: rbcar_joystick.launch
agv_bobcat/bobcat/rbcar_joystick/src/: teleop.cpp
agv_bobcat/bobcat/rbcar_localization/launch/: amcl.launch  map_server.launch
agv_bobcat/bobcat/rbcar_localization/maps/: wow.pgm  wow.yaml  wow2.pgm  wow2.yaml
agv_bobcat/bobcat/rbcar_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
agv_bobcat/bobcat/rbcar_navigation/launch/: move_base.launch
agv_bobcat/bobcat/rbcar_robot_control/launch/: rbcar_robot_control.launch
agv_bobcat/bobcat/rbcar_robot_control/src/: rbcar_robot_control.cpp
agv_bobcat/bobcat/rbcar_sim_bringup/: CMakeLists.txt
agv_bobcat/bobcat/rbcar_sim_bringup/launch/: rbcar_complete_gs.launch
agv_bobcat/bobcat/rbcar_twist2ack/src/rbcar_twist2ack/: twist2ack.py
pioneer/p3at_astar/pioneer3at/launch/: pioneer3at.launch
rx90/moveit_tutorials/doc/rx90_rviz_control/src/: Rx90.cpp
rx90/rx90_control/: CMakeLists.txt  package.xml
rx90/rx90_control/src/: gripper_plugin.cpp  rx90_pub.cpp
rx90/rx90_description/launch/: rx9000.launch
ual/grvc-ual/heca_plugins/: CMakeLists.txt  package.xml
ual/grvc-ual/heca_plugins/src/: Set_Activation_Client.cpp  follow_bobcat(copy).cpp  follow_bobcat.cpp
ual/grvc-ual/pid/: CMakeLists.txt  package.xml
ual/grvc-ual/px4_bringup/launch/: test_simulate.launch
ual/grvc-ual/uav_abstraction_layer/launch/: test_server.launch
ual/grvc-ual/uav_abstraction_layer/src/: backend_mavros.cpp
